fix styles for start string Loading...

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="loading">
+      <h1>Loading...</h1>
+    </div>
+  </app-root>
 </body>
 
 </html>
